--- a/style.css
+++ b/style.css
@@ -819,6 +819,98 @@
                 justify-self: center;
                 margin: 10px 0 0 0 ;
                 }
+    .Portfolio__Banner {
+        display: grid;
+        grid-template-areas:
+        " . Star Title"
+        ;
+        grid-template-columns: auto auto 65%;
+        margin: 20vh 0 30vh 0;
+        height: auto;
+    }
+        .Portfolio__Header__Star {
+            grid-area: Star;
+            align-self: center;
+            justify-self: end;
+            padding: 0 50px 0 0;
+        }
+        .Portfolio__Header__img {
+            padding: 0 20% 0 0;
+            grid-area: Title;
+            justify-self: end;
+            z-index: 10;
+        }
+        .Portfolio__Header__text {
+            text-align: left;
+            grid-area: Title;
+            font-size: 6rem;
+            color: white;
+            line-height: 6rem;
+            z-index: 20;
+            font-family: 'Oi', cursive;
+            align-self: center;
+        }
+        .Portfolio__UIDESIGN__BG {
+            display: flex;
+            flex-wrap: wrap;
+            height: 70vh;
+            justify-content: space-around;
+        }
+        .Portfolio__SocialMedia__BG {
+            display: grid;
+            grid-template-areas:
+            "Title Star"
+            ;
+            grid-template-columns: 70% 30%;
+            background-image: url(./img/Gradient-2.png);
+            background-position: center;
+            background-size: cover;
+            height: 80vh;
+            margin: 15vh 0 0 0;
+        }
+        .Portfolio__SocialMedia__Star4 {
+            grid-area: Title;
+            z-index: 10;
+            align-self:flex-start;
+            justify-self: left;
+            padding: 8% 0 0 8%;
+        }
+        .Portfolio__SocialMedia__img {
+            grid-area: Title;
+            z-index: 20;
+            padding: 0 0 0 15%;
+            align-self: center;
+            justify-self: left;
+        }
+        .Portfolio__SocialMedia__text {
+            grid-area: Title;
+            z-index: 30;
+            text-align: left;
+            align-self: center;
+            font-size: 6rem;
+            color: white;
+            line-height: 6rem;
+            font-family: 'Oi', cursive;
+            padding: 0 0 0 35%;
+        }
+        .Portfolio__SocialMedia__text2 {
+            font-size: 3rem;
+            color: white;
+            line-height: 4rem;
+        }
+        .Portfolio__SocialMedia__Star7 {
+            grid-area: Star;
+            align-self: center;
+            justify-self: left;
+            padding: 0 4% 0 0;
+        }
+        .Portfolio__SOCIALMEDIA__Panel {
+            display: flex;
+            flex-wrap: wrap;
+            height: auto;
+            justify-content: space-around;
+            margin: 0 0 20vh 0;
+        }
     .footer {
     height: 12vh;
     background-image: url(./img/FOOTER.png);
@@ -1006,6 +1098,40 @@
                 .Aboutme__skills__content--grid {
                     width: auto;
                 }
+            .Portfolio__UIDESIGN__BG {
+                height: auto;
+            }
+            .Portfolio__Header__text {
+                text-align: left;
+                font-size: 3rem;
+                line-height: 3rem;
+                z-index: 20;
+                align-self: center;
+            }
+            .Portfolio__SocialMedia__BG {
+                grid-template-areas:
+                "Title"
+                ;
+                grid-template-columns: 100%;
+                height: auto;
+                margin: 20vh 0 20vh 0;
+            }
+            .Portfolio__SocialMedia__Star4 {
+                display: none;
+            }
+            .Portfolio__SocialMedia__text {
+                font-size: 3rem;
+                color: white;
+                line-height: 3rem;
+                font-family: 'Oi', cursive;
+            }
+            .Portfolio__SocialMedia__text2 {
+                font-size: 2rem;
+                line-height: 3rem;
+            }
+            .Portfolio__SocialMedia__Star7 {
+                display: none;
+            }
         .footer {
         height: 10vh;
         padding-top: 0;
@@ -1096,16 +1222,41 @@
             .Aboutme__skills__strokeStar {
             justify-self: center;
             padding: 0 0 50px 0 ;
-            margin: 0;
+            margin: 5h 0 5vh 0;
             }
             .Aboutme__template__strokeStar2 {
             grid-area: strokeStar2;
             justify-self: center;
             padding: 0;
-            margin: 0;
+            margin: 10vh 0 5vh 0;
             }
             .Aboutme__skills__content--grid {
                 width: auto;
             }
+        .Portfolio__UIDESIGN__BG {
+            height: auto;
+            grid-template-columns: 100%;
+            margin: 20vh 0 20vh 0;
+        }
+        .Portfolio__Header__text {
+            text-align: left;
+            font-size: 4rem;
+            line-height: 4rem;
+            z-index: 20;
+            align-self: center;
+        }
+        .Portfolio__SocialMedia__BG {
+            grid-template-areas:
+            "Title"
+            ;
+            height: auto;
+        }
+        .Portfolio__SocialMedia__Star7 {
+            display: none;
+        }
+        .Portfolio__SocialMedia__text {
+            font-size: 3rem;
+            line-height: 3rem;
+        }
     }
 </style>
