--- a/style.css
+++ b/style.css
@@ -911,6 +911,39 @@
             justify-content: space-around;
             margin: 0 0 20vh 0;
         }
+    .Contact__Form {
+        width: 300px;
+        height: 50%;
+        background-color: white;
+        text-align: center;
+        border-radius: 3rem;
+        padding: 5vh 0 10vh 0;
+        margin: 0 auto 0 auto;
+    }
+    .Contact__Form__Titles {
+        font-family: 'Roboto', sans-serif;
+        font-weight: bold;
+        color: #666666;
+        font-size: 1.5rem;  
+        line-height: 3rem;
+    }
+    .Contact__Form__fillers {
+        width: 80%;
+        height: 1.5rem;
+        border-radius: 1rem;
+        border-style:solid;
+        border-width: 0.08rem;
+    }
+    .Contact__Form__buttom {
+        font-weight: bold;
+        font-family: 'Roboto', sans-serif;
+        color: #666666;
+        font-size: 1.5rem;  
+        line-height: 3rem;
+        margin: 30px 0 0 0;
+        width: 40%;
+        border-radius: 1.5rem;
+    }
     .footer {
     height: 12vh;
     background-image: url(./img/FOOTER.png);
